--- a/page.html
+++ b/page.html
@@ -2,6 +2,15 @@
 <head>
 <title>My Second Page</title>
 </head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7GJS7L891K"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7GJS7L891K');
+</script>
 <body>
   My Second Page. Back <a href="home.html">Home</a>.
 </body>
